Update information and add .DS_Store files for project directories

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 
                     <h3>Contact Information</h3>
                     <div class="contact-info">
-                        <p>📧 Email: <a href="mailto:student@example.com">student@example.com</a></p>
-                        <p>🐙 GitHub: <a href="https://github.com/student/finance-tracker" target="_blank" rel="noopener">github.com/student/finance-tracker</a></p>
+                        <p>📧 Email: <a href="mailto:ucheezette@gmail.com">ucheezette@gmail.com</a></p>
+                        <p>🐙 GitHub: <a href="https://github.com/ucEzette/Student_Finance_Tracker" target="_blank" rel="noopener">github.com/ucEzette/Student_Finance_Tracker</a></p>
                     </div>
 
                     <h3>Keyboard Navigation</h3>
